
[metadata]
name = warp2isonet
url = https://github.com/alisterburt/rich-typer-test
author = Alister Burt
author_email = alisterburt@gmail.com
description = prepare files for isonet directly from a warp project
long_description = file: README.md
long_description_content_type = text/markdown
license = No license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/alisterburt/warp2isonet

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    rich
    typer
    numpy
    starfile
    pandas
    thefuzz
    setuptools-scm


[options.entry_points]
console_scripts =
    warp2isonet = warp2isonet.warp2isonet:cli

[bdist_wheel]
universal = 1
